fix lawyer avatar size on mobile

--- a/styles/lawyer.css
+++ b/styles/lawyer.css
@@ -31,7 +31,7 @@ main {
   height: 100%;
   background-color: var(--main-color-gray);
   padding: var(--padding-l) 0;
-  padding-right: var(--padding-l);
+  padding: var(--padding-l) var(--padding-m) 0 var(--padding-m);
 }
 
 .avatar {
@@ -44,10 +44,12 @@ main {
 }
 
 .textContainer {
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
   background-color: var(--main-color-gray);
-  padding-left: var(--padding-l);
+  padding: 0 var(--padding-m);
 }
 
 .text {
@@ -117,19 +119,18 @@ main {
   }
 
   .avatarContainer {
+    display: flex;
+    justify-content: center;
     padding: 0;
   }
+}
 
+@media screen and (max-width: 600px) {
   .avatarContainer > .avatar {
     width: 100%;
     max-width: none;
     height: auto;
-    background-position: top;
+    max-height: 400px;
     border-radius: 0;
-  }
-
-  .textContainer {
-    padding: 0 var(--padding-m);
-    z-index: 2;
   }
 }
